# scarab

./: .gitignore  stack.xml
DifferentialDriveMsgs/: mainpage.dox  manifest.xml
DifferentialDriveMsgs/msg/: DifferentialDriveOdom.msg  PIDParam.msg  VWCmd.msg
PoseMsgs/: mainpage.dox  manifest.xml
PoseMsgs/msg/: Pose2DWithCovariance.msg  PoseWithCovariance.msg  State.msg
acroname/: CMakeLists.txt  mainpage.dox  manifest.xml
acroname/brainstem/: agent_info.txt  make_library.Linux  make_program.Linux  make_program_cpp.Linux  makefile  packager_info.txt  readme.txt  shell_info.txt
acroname_moto/: CMakeLists.txt  TUNING  mainpage.dox  manifest.xml  mapping.launch  pid_tune.py  scarab.launch  test.launch
acroname_moto/msg/: PIDParam.msg  motor_debug.msg
acroname_moto/src/: AcronameMotor.cc  AcronameMotor.h  acroname_moto_node.cc  calibrate.py  check_baud_rate.c  example.c  set_baud_rate.c
bb04/: CMakeLists.txt  README  diagnostics.launch  diagnostics.yaml  mainpage.dox  manifest.xml  minirc.bb04  package.xml
bb04/scripts/: bb04_node
hfn/: CMakeLists.txt  package.xml
hfn/action/: Move.action
hfn/cfg/: HumanFriendlyNavigation.cfg
hfn/include/player_map/: map.h  rosmap.hpp
hfn/launch/: sim.launch  test_hfn.rviz
hfn/scripts/: abort.sh  goal_to_action.py  hfn_stop  home.sh  setup_switch.sh  switch_places.sh  tf_posestamped_node.py
hfn/src/: hfn.cpp  hfn.hpp  hfn_node.cpp  map.c  rosmap.cpp
joy_to_twist/: CMakeLists.txt  joystick.launch  mainpage.dox  manifest.xml  package.xml
joy_to_twist/src/: joy_to_twist.cpp
key_to_twist/: CMakeLists.txt  manifest.xml  package.xml
key_to_twist/src/: key_to_twist.cpp
kinematic_sim/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  test_sim_node.xml
kinematic_sim/src/: kinematic_sim.cc
laser_odom/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
laser_odom/launch/: sim.launch  sim.rviz  sim_gazebo.launch  sim_gazebo.rviz
laser_odom/src/: Point2d.hpp  Pose2d.hpp  fisher.cpp  fisher.h  icp.cpp  icp.h  laser_odom.cpp  laser_odom.h  laser_odom_bag.cpp  matcher.cpp  matcher.hpp  matcher_bag.cpp  matcher_test.cpp  type.h
laser_simulator/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
laser_simulator/config/: models.yaml
laser_simulator/include/: LaserSimulator.h
laser_simulator/launch/: make_pairs.launch  test.launch
laser_simulator/models/: URG_04LX.yaml  UTM_30.yaml
laser_simulator/msg/: PoseStampedNamed.msg  PoseStampedNamedArray.msg  ScanPair.msg
laser_simulator/src/: LaserSimulator.cc  laser_simulator.cc  make_scan_pairs.cpp  pose_aggregator_node.cpp
laser_simulator/vis/: test.xml
laser_subsample/: CMakeLists.txt  mainpage.dox  manifest.xml
laser_subsample/src/: laser_subsample.cc
mesh80211s/: CMakeLists.txt  package.xml
mesh80211s/include/: station.h
mesh80211s/msg/: MeshStation.msg  MeshStations.msg
mesh80211s/src/: mesh80211s.cc  station.c
move_base_utils/: stack.xml
move_base_utils/move_base_config/: mainpage.dox  manifest.xml
move_base_utils/move_base_goal_sync/: CMakeLists.txt  mainpage.dox  manifest.xml
move_base_utils/simple_nav/: CMakeLists.txt  mainpage.dox  manifest.xml
odometry_aggregator/: CMakeLists.txt  mainpage.dox  manifest.xml
odometry_aggregator/ipc/: Makefile
odometry_aggregator/msg/: OdometryArray.msg
odometry_aggregator/src/: odometry_aggregator.cc
pamcl/: CMakeLists.txt
pamcl/src/: amcl_node.cpp
pamcl_rviz/: CMakeLists.txt  mainpage.dox  manifest.xml  pamcl_rviz.vcg
pamcl_rviz/src/: pamcl_marker_node.cpp
pose_aggregator/: CMakeLists.txt  package.xml
pose_aggregator/msg/: PoseStampedNamedArray.msg
pose_aggregator/src/: pose_aggregator_node.cpp
radio_collect/: mainpage.dox  manifest.xml
radio_collect/config/: scarab.xml  vis-scarab.xml
radio_collect/launch/: levine.launch  vis-one-scarab.launch  vis-scarab.launch
radio_collect/vis/: one-scarab.xml  vis.xml
roboclaw/: .gitignore  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
roboclaw/cfg/: Roboclaw.cfg
roboclaw/msg/: PIDParam.msg  motor_state.msg
roboclaw/scripts/: calibrate.py
roboclaw/src/: RoboClaw.cpp  RoboClaw.h  enc_demo.cpp  pid.cpp  pid.h  roboclaw_node.cpp  roboclaw_restart.cpp  usb_reset.c
scarab/: CMakeLists.txt  diagnostic.launch  gmapping.launch  groovy.rviz  hfn.launch  localization.launch  package.xml  rviz.launch  scarab.launch  scarab.rviz
scarab/maps/: levine_towne-4.yaml  skirkanich.pgm  skirkanich.yaml
scarab/scripts/: posestamped_node.py  scadd  scls  scrm  scsync  scwipews
scarab/setup/: README.md  setup.py  setup_interface.sh  setup_misc  setup_ros.sh
scarab/setup/files/etc/default/ifplugd/: SCARAB
scarab/setup/files/etc/hosts/: SCARAB
scarab/setup/files/etc/olsrd.conf/: SCARAB
scarab/setup/files/etc/udev/rules.d/scarab.rules/: SCARAB
scarab/setup/files/etc/wpa_supplicant/wpa_supplicant.conf/: SCARAB
scarab_description/: CMakeLists.txt  package.xml
scarab_description/launch/: rrbot.rviz  rrbot_rviz.launch
scarab_description/urdf/: hexagons.urdf.xacro  kobuki.urdf.xacro  kobuki_gazebo.urdf.xacro  scarab.xacro  turtlebot_gazebo.urdf.xacro  turtlebot_properties.urdf.xacro
scarab_gazebo/: CMakeLists.txt  package.xml  sdf_levine.py
scarab_gazebo/launch/: scarab.rviz  scarab_world.launch
scarab_gazebo/scripts/: sdf_levine.py
scarab_gazebo/worlds/: levine.world
scarab_launch/: CMakeLists.txt  diagnostic.launch  diagnostics.yaml  gmapping.launch  groovy.rviz  localization.launch  mainpage.dox  manifest.xml  package.xml  scarab.launch
scarab_msgs/: CMakeLists.txt  package.xml
scarab_msgs/action/: Move.action
scarab_rviz/: CMakeLists.txt  mainpage.dox  manifest.xml
scarab_twist/: CMakeLists.txt  joystick.launch  package.xml
scarab_twist/src/: key_to_twist.cpp
tf_throttle/: CMakeLists.txt  package.xml
tf_throttle/src/: tf_throttle.cpp
upenn_maps/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
urg_node/: CMakeLists.txt  mainpage.dox  manifest.xml
vicon/: CMakeLists.txt  mainpage.dox  manifest.xml
vicon/src/: vicon.cc  (+6 more)
vicon_vsk/: config.xml  manifest.xml
(+1081 files in other folders)
