<?xml version="1.0"?>
<package>
  <name>bb04</name>
  <version>0.0.0</version>
  <description>The bb04 package</description>

  <maintainer email="bcharrow@seas.upenn.edu">bcharrow</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <run_depend>diagnostic_msgs</run_depend>
</package>
