<?xml version="1.0"?>
<package>
  <name>hfn</name>
  <version>0.0.0</version>
  <description>
    Implementation of the paper "Human-friendly Robot Navigation
    in Dynamic Environments" by Jerome Guzzi, Alessandro Giusti, Luca
    Gambardella, Guy Theraulaz, and Gianni Di Caro from ICRA 2013.
  </description>
  <maintainer email="pdames@seas.upenn.edu">pdames</maintainer>
  <author>Philip Dames</author>
  <license>GPLv3</license>

  <url type="website">http://www.idsia.ch/~gianni/Papers/ICRA13.pdf</url>
  <url type="website">http://www.youtube.com/watch?v=UtqIN57Bsh8</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>angles</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>scarab_msgs</build_depend>

  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>angles</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>scarab_msgs</run_depend>

</package>
