<?xml version="1.0"?>
<package>
  <name>kinematic_sim</name>
  <version>0.0.0</version>
  <description>The kinematic_sim package</description>
  <maintainer email="bcharrow@seas.upenn.edu">bcharrow</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>hfn</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>hfn</run_depend>
</package>
