<?xml version="1.0"?>
<package>
  <name>laser_odom</name>
  <version>0.0.0</version>
  <description>laser_simulator</description>
  <maintainer email="bcharrow@seas.upenn.edu">bcharrow</maintainer>
  <author>Nathan Michael</author>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>angles</build_depend>
  <build_depend>timeit</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>angles</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
</package>

