<?xml version="1.0"?>
<package>
  <name>mesh80211s</name>
  <version>0.0.0</version>
  <description>The mesh80211s package</description>
  <maintainer email="bcharrow@seas.upenn.edu">bcharrow</maintainer>
  <author>Nathan Michael</author>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <!-- <build_depend>nl</build_depend> -->
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <!-- <run_depend>nl</run_depend> -->
  <run_depend>message_runtime</run_depend>
</package>
