<?xml version="1.0"?>
<package>
  <name>scarab</name>
  <version>0.0.0</version>
  <description>The scarab package</description>
  <maintainer email="bcharrow@seas.upenn.edu">bcharrow</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
</package>
