<?xml version="1.0"?>
<package>
  <name>scarab_twist</name>
  <version>0.0.0</version>
  <description>The scarab_twist package</description>

  <maintainer email="bcharrow@seas.upenn.edu">bcharrow</maintainer>
  <license>TODO</license>


  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
